# perfmonger

./: .dir-locals.el  .gitignore  .goreleaser.yaml  .tachikoma.yml  .travis.yml  00_LOAD_GO_DEVENV.sh  AGENTS.md  CLAUDE.md  Gemfile  Guardfile  HOWTO.md  Makefile  Makefile.am  NEWS  NEWS.md  README.md  RELEASING.md  Rakefile  apm.lock.yaml  apm.yml  autogen.sh  common.mk  configure.ac  perfmonger.gemspec  perfmonger.pgr  pyproject.toml  wercker.yml
.claude/: settings.json
.claude/skills/commit-all/: SKILL.md
.claude/skills/commit-session/: SKILL.md
.devcontainer/: Dockerfile  build.sh  devcontainer.json  initialize.sh  inside-container.settings.local.json  shell.sh
.github/workflows/: ci.yml  release.yml
core/: Makefile  build.sh  go.mod  go.sum  perfmonger-player.go  perfmonger-plot-formatter.go  perfmonger-recorder.go  perfmonger-summarizer.go  utils.go
core/cmd/perfmonger/: fingerprint.go  fingerprint_tarball_test.go  fingerprint_test.go  initshell.go  initshell_test.go  live.go  main.go  main_test.go  play.go  play_test.go  plot.go  plot_test.go  plotformat.go  record.go  record_test.go  stat.go  stat_test.go  summary.go  summary_test.go
core/cmd/perfmonger-core/: perfmonger-core.go
core/cmd/perfmonger-player/: perfmonger-player.go
core/cmd/perfmonger-plot-formatter/: README.md  perfmonger-plot-formatter.go
core/cmd/perfmonger-recorder/: perfmonger-recorder.go
core/cmd/perfmonger-summarizer/: perfmonger-summarizer.go
core/cmd/perfmonger-viewer/: perfmonger-viewer.go
core/internal/perfmonger/: Makefile  getpartitions_test.go  perfmonger.go  perfmonger_linux.go  perfmonger_linux_test.go  stat.go  stat_test.go  usage.go  usage_test.go  utils.go
core/subsystem/: Makefile  perfmonger.go  perfmonger_darwin.go  perfmonger_linux.go  perfmonger_linux_test.go  stat.go  stat_test.go  usage.go  usage_test.go
data/: Makefile.am  NOTICE  sysstat.ioconf
data/assets/: Makefile.am  dashboard.erb
data/assets/css/: Makefile.am  perfmonger.css
data/assets/img/: Makefile.am
data/assets/js/: Makefile.am  canvasjs.js  canvasjs.min.js
dbg/: README  error01.pgr
devdoc/: DONE.md  TODO.md
doc/: architecture.md
doc/tickets/: 0001-enable-pager-in-summary.md  0002-player-rundirect-api.md  0003-summarizer-rundirect-api.md  0004-remove-ruby-code.md  0005-update-readme.md  0007-release-pipeline.md  0008-block-device-topology-aware-aggregation.md  0009-embedding-api-for-c-callers.md  0010-record-embed-system-metadata.md  0011-remove-legacy-standalone-binaries.md  0012-summary-test-package-broken.md  0014-recorder-signal-notify-never-stopped.md  0015-recorder-flush-error-ignored.md  0016-killsession-removes-file-outside-lock.md  0017-player-writestring-error-shadowed.md  0018-logreader-panics-on-short-input.md  0019-gzip-reader-never-closed.md  0020-play-run-always-returns-nil.md  0021-summarizer-one-record-zero-last-record.md  0022-summarizer-skip-by-err-to-output.md  0023-plot-gnuplotbin-shell-injection.md  0024-plot-save-gpfiles-errors-ignored.md  0025-plot-output-path-not-escaped.md  0026-live-record-disk-flag-ignored.md  0027-recorder-player-stdout-goroutine-not-joined.md  0028-live-run-returns-nil.md  0029-stat-exit-code-discarded.md  0030-stat-recorder-errors-ignored.md  0031-fingerprint-runcommand-discards-errors.md  0032-fingerprint-tarball-close-errors-dropped.md  0033-fingerprint-readfile-spurious-errors.md  0034-initshell-base-empty-shell-detection.md  0035-initshell-versioned-shell-name.md  0036-initshell-dead-code-runinitshell.md  0037-recorder-sigterm-not-handled.md  0038-cpu-core-index-not-bounds-checked.md  0039-recorder-bufio-not-flushed-on-panic.md  0040-recorder-player-stdin-fd-leak.md  0041-readnetstat-fixed-slice-no-length-guard.md  0042-player-curr-not-flipped-on-showstat-error.md  (+18 more)
doc/tickets/archive/: DONE.md  README.md
doc/tickets/resolved/: 0001-enable-pager-in-summary.md  0002-player-rundirect-api.md  0003-summarizer-rundirect-api.md  0004-remove-ruby-code.md  0005-update-readme.md  0006-replace-rakefile.md  0007-release-pipeline.md  0011-remove-legacy-standalone-binaries.md  0012-summary-test-package-broken.md  0013-recorder-writesessionfile-ignores-open-error.md  0014-recorder-signal-notify-never-stopped.md  0015-recorder-flush-error-ignored.md  0017-player-writestring-error-shadowed.md  0021-summarizer-one-record-zero-last-record.md  0022-summarizer-skip-by-err-to-output.md  0023-plot-gnuplotbin-shell-injection.md  (+24 more)
exe/: perfmonger
ext/perfmonger/: Makefile  extconf.rb  perfmonger.h  perfmonger_record.c  sysconfig.h
lib/: perfmonger.rb
lib/perfmonger/: cli.rb  config.rb  version.rb
misc/: _perfmonger  perfmonger-completion.bash  perfmonger.bash  perfmonger.zsh  release-howto.txt
misc/werker-box/: Dockerfile  build-push.sh
package/rpm/: 10_build-in-chroot.sh  20_sign-rpm.sh  build-rpm.sh  perfmonger.spec.in
package/yumrepo/: RPM-GPG-KEY-hayamiz  build-repos-rpm.sh  hayamiz-repos.spec  hayamiz.repo  update-repos.sh
spec/: bin_spec.rb  fingerprint_spec.rb  live_spec.rb  perfmonger_spec.rb  play_spec.rb  plot_spec.rb  record_spec.rb  spec_helper.rb  stat_spec.rb  summary_spec.rb
spec/data/: busy100.pgr  busy100.pgr.played  busy100.pgr.summary  busy100.pgr.summary.json
spec/support/: aruba.rb
src/: Makefile.am  libperfmonger.c  main.c  perfmonger  perfmonger-plot  perfmonger-server  perfmonger.c  perfmonger.h  perfmonger.in
src/iostat/: Makefile.am  common.h
src/ruby/: Makefile.am  perfmonger.rb
src/ruby/perfmonger/: Makefile.am  cli.rb  config.rb.in  version.rb.in
src/ruby/perfmonger/command/: Makefile.am  base_command.rb  bukko.rb  fingerprint.rb  plot.rb  record.rb  record_option.rb  server.rb  stat.rb  stat_option.rb  summary.rb
src/sysstat/: Makefile.am  iostat.c  libiostat.h  libsysstat.h  mpstat.c  mpstat.h  sysconfig.h  sysconfig.in
test/: Makefile.am  run-test.sh  test-perfmonger.c  test.h
test/spec/data/: 2devices.expected
tests/: conftest.py  test_background.py  test_cli.py  test_fingerprint.py  test_live.py  test_play.py  test_plot.py  test_record.py  test_stat.py  test_summary.py
(+32 files in other folders)
