
EXTRA_DIST = base_command.rb plot.rb record.rb server.rb

perfmonger_rubylib_perfmonger_commanddir = $(perfmonger_rubylibdir)/perfmonger/command

dist_perfmonger_rubylib_perfmonger_command_DATA =	\
	base_command.rb				\
	plot.rb					\
	record.rb					\
	record_option.rb				\
	server.rb					\
	stat.rb					\
	stat_option.rb					\
	summary.rb					\
	fingerprint.rb
